--- a/UdemyRealWorldUnitTest.Web/Views/_ViewImports.cshtml
+++ b/UdemyRealWorldUnitTest.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using UdemyRealWorldUnitTest.Web
-@using UdemyRealWorldUnitTest.Web.Models
+﻿@using RealWorldUnitTest.Web
+@using RealWorldUnitTest.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
